# WindowLasso

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
src/: app.rs  hotkeys.rs  localization.rs  main.rs  settings.rs  tray.rs  types.rs
src/locales/: de.ftl  en.ftl  es.ftl  fr.ftl  ja.ftl  zh.ftl
src/views/: main_view.rs  mod.rs  monitor_picker.rs  settings_view.rs  styles.rs  tray_dialog.rs
src/windows_api/: mod.rs  monitors.rs  windows.rs
