[package]
name = "window-lasso"
version = "0.1.0"
edition = "2021"
description = "A sophisticated window management tool for recovering and moving windows"
authors = ["WindowLasso"]
license = "MIT"

[dependencies]
# GUI
iced = { version = "0.14", features = ["tokio", "canvas", "image", "svg"] }

# Image processing for icon loading
image = "0.25"

# Windows API
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Serialization for settings
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Localization
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# Global hotkeys
global-hotkey = "0.6"

# System tray
tray-icon = "0.19"

# Directories for config
dirs = "5"

# Open URLs in default browser
open = "5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
